# xmms-revived

./: .clang-format  .gitignore  AUTHORS  BUILDING.md  ChangeLog  DEBUGGING.md  Makefile.am  Makefile.in  NEWS  README  README.md  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  configure~  gnomexmms.1.in  mkinstalldirs  xmms.1.in  xmms.spec  xmms.spec.in
Effect/: Makefile.in  Makefile.in.orig
Effect/echo_plugin/: Makefile.am  Makefile.in  Makefile.in.orig  gui.c
Effect/stereo_plugin/: Makefile.am  Makefile.in  Makefile.in.orig  stereo.c
Effect/voice/: Makefile.am  Makefile.in  Makefile.in.orig  about.c
General/: Makefile.in  Makefile.in.orig
General/ir/: Makefile.am  Makefile.in  Makefile.in.orig  about.c  configure.c  ir.c  ir.h  irio.c
General/joystick/: Makefile.am  Makefile.in  Makefile.in.orig  about.c  configure.c  joy.c
General/song_change/: Makefile.am  Makefile.in  Makefile.in.orig  song_change.c
Input/: Makefile.am  Makefile.in
Input/cdaudio/: Makefile.am  Makefile.in  cdaudio.c  cdaudio.h  cddb.c  cdindex.c  cdinfo.c  configure.c  http.c  sha.h  sha_func.c
Input/flac/: Makefile.am  Makefile.in  flac.c  flac.h
Input/idcin/: Makefile.am  Makefile.in  idcin.c  idcin.h
Input/mikmod/: Makefile.am  Makefile.in  drv_xmms.c  mikmod-plugin.h  plugin.c
Input/mpg123/: Makefile.am  Makefile.in  common.c  configure.c  dct64_3dnow.s  decode.c  decode_3dnow.s  decode_i386.c  fileinfo.c  getcpuflags.s  http.c  id3.c  id3.h  id3_frame.c  id3_frame_content.c  id3_frame_text.c  id3_frame_url.c  id3_header.h  id3_tag.c  layer2.c  layer3.c  mpg123.c  mpg123.h  tabinit.c
Input/tonegen/: Makefile.am  Makefile.in  tonegen.c
Input/vorbis/: Makefile.am  Makefile.in  configure.c  fileinfo.c  http.c  utf8.c  vorbis.c  vorbis.h
Input/wav/: Makefile.am  Makefile.in  wav.c  wav.h
Output/: Makefile.am  Makefile.in
Output/OSS/: Makefile.am  Makefile.in  OSS.h  about.c  audio.c  configure.c  convert.c
Output/alsa/: Makefile.am  Makefile.in  audio.c  configure.c
Output/disk_writer/: Makefile.am  Makefile.in  disk_writer.c
Output/esd/: Makefile.am  Makefile.in  about.c  audio.c  configure.c  esdout.h  init.c  mixer.c
Output/solaris/: Makefile.am  Makefile.in  about.c  audio.c  configure.c
Output/sun/: Makefile.am  Makefile.in  configure.c  resample.h
Visualization/: Makefile.in
Visualization/blur_scope/: Makefile.am  Makefile.in  blur_scope.c  blur_scope.h  config.c
Visualization/opengl_spectrum/: Makefile.am  Makefile.in  configure.c
Visualization/sanalyzer/: Makefile.am  Makefile.in  spectrum.c
autom4te.cache/: output.0  output.10  output.11  output.12  output.2  output.4  output.5  output.7  output.8  output.9  requests  traces.1  traces.10  traces.11  traces.12  traces.2  traces.3  traces.4  traces.6  traces.7  traces.8  traces.9
gnomexmms/: Makefile.am  Makefile.in  gnomexmms.c  gnomexmms.desktop  gnomexmms.gnorba  gnomexmms.xpm
intl/: Makefile.in  Makefile.in.in
libxmms/: Makefile.am  Makefile.in  acconfig.h  acinclude.m4  aclocal.m4  charset.c  charset.lo  config.h.in  config.h.in~  configfile.c  configfile.lo  configure  configure.ac  configure.in  configure~  dirbrowser.c  dirbrowser.lo  formatter.c  formatter.lo  libxmms.la  titlestring.c  titlestring.lo  util.c  xconvert.c  xconvert.lo  xentry.c  xentry.lo  xmmsctrl.c  xmmsctrl.h  xmmsctrl.lo
libxmms/.libs/: libxmms.la  libxmms.lai  libxmms.so.1.3.1
libxmms/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.2  traces.3  traces.5  traces.6  traces.7
libxmms/m4/: xmms-libxmms.m4
m4/: xmms-macros.m4
po/: ChangeLog  Makevars  POTFILES.in  af.gmo  af.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bs.gmo  bs.po  ca.gmo  ca.po  cat-id-tbl.c  cs.gmo  cs.po  cy.gmo  cy.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  (+76 more)
wmxmms/: Makefile.am  Makefile.in  wmxmms  wmxmms.c
xmms/: Makefile.am  Makefile.in  about.c  bmp.c  controlsocket.c  controlsocket.h  dnd.h  dock.c  effect.c  eq_slider.c  equalizer.c  equalizer.h  fft.c  fullscreen.c  general.c  hints.c  hints.h  hslider.c  input.c  main.c  main.h  mkdtemp.c  output.c  pbutton.c  playlist.c  playlist.h  playlist_list.c  playlist_popup.c  playlist_slider.c  playlistwin.c  playlistwin.h  plugin.h  pluginenum.c  prefswin.c  sbutton.c  skin.c  skinwin.c  sm.c  sm.h  tbutton.c  (+7 more)
xmms/Skins/: xmmsuse-1.0-1.tar.bz2
xmms/defskin/: Makefile.in  titlebar.xpm
